[gd_scene load_steps=13 format=3 uid="uid://dieou56o08txp"]

[ext_resource type="Script" path="res://Scenes/Entities/Player/MainPlayer.gd" id="1_dqk6w"]
[ext_resource type="Shader" path="res://Resources/Shaders/Pixel3DShader.gdshader" id="2_cpuhc"]
[ext_resource type="Script" path="res://Scenes/Entities/Player/Cameracontent.gd" id="2_ykeem"]

[sub_resource type="Animation" id="Animation_wkexs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cameracontent:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cameracontent:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jn773"]
_data = {
"RESET": SubResource("Animation_wkexs")
}

[sub_resource type="Animation" id="Animation_lfair"]
resource_name = "walk"
length = 1.756
loop_mode = 1

[sub_resource type="Animation" id="Animation_3ia71"]
resource_name = "crunch"
length = 1.999
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cameracontent:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.975, 1.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.05, 0, 0), Vector3(0, 0.1, 0), Vector3(0.05, 0, 0), Vector3(0, 0.1, 0)]
}

[sub_resource type="Animation" id="Animation_o4lvu"]
resource_name = "run"
length = 2.6005
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cameracontent:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cameracontent:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(0.31864, 0.34151),
"update": 0,
"values": [Vector3(0, 0, 0.00349066), Vector3(0, 0, -0.00349066)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_euv03"]
_data = {
"crunch": SubResource("Animation_3ia71"),
"run": SubResource("Animation_o4lvu"),
"walk": SubResource("Animation_lfair")
}

[sub_resource type="QuadMesh" id="QuadMesh_2auo3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rfglt"]
render_priority = 127
shader = ExtResource("2_cpuhc")

[sub_resource type="BoxShape3D" id="BoxShape3D_xxx22"]
size = Vector3(1, 1.96, 1)

[node name="MainPlayer" type="CharacterBody3D"]
collision_mask = 8
script = ExtResource("1_dqk6w")
speed = 5.0
acceleration = 1000.0

[node name="Cameracontent" type="Node3D" parent="."]
script = ExtResource("2_ykeem")

[node name="PlayerCamera" type="Camera3D" parent="Cameracontent"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.95996, 0)
current = true
fov = 70.0

[node name="CameraContentAnimation" type="AnimationPlayer" parent="Cameracontent/PlayerCamera"]
unique_name_in_owner = true
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_jn773"),
"PlayerCamera": SubResource("AnimationLibrary_euv03")
}
speed_scale = 3.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cameracontent/PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.174893)
mesh = SubResource("QuadMesh_2auo3")
surface_material_override/0 = SubResource("ShaderMaterial_rfglt")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Cameracontent/PlayerCamera"]
transform = Transform3D(0.333772, -0.757802, 0, 0.757802, 0.333772, 0, 0, 0, 0.82805, 0.00120002, -0.338465, -0.547195)
radius = 0.026
height = 1.11101

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="Cameracontent/PlayerCamera/CSGCylinder3D"]
transform = Transform3D(1.01553, 8.9407e-08, 0, -8.9407e-08, 1.01553, 0, 0, 0, 0.0248154, -0.541017, -0.351137, 0.0229424)
polygon = PackedVector2Array(0.702289, 0.730047, 0.652653, 0.76111, 0.551032, 0.789292, 0.490303, 0.784716, 0.408449, 0.76734, 0.368219, 0.762533, 0.464087, 0.980519, 0.59631, 1.05982, 0.56696, 1.01292, 0.611857, 1.03083, 0.670633, 0.920018)

[node name="PlayerColl" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1.30281, 0, 0, 0, 1, 0, 1.30209, 0)
shape = SubResource("BoxShape3D_xxx22")

[node name="Timers" type="Node" parent="."]

[node name="SlideTime" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timers/SlideTime" to="." method="_on_slide_time_timeout"]
